# clipper

./: .env.example  .gitignore  LICENSE  README.md  clipper_pipeline_spec.md  config.yaml  pyproject.toml  run.bat  run.py
clipper/: __init__.py  cli.py  config.py  ffmpeg_utils.py  graph.py  logging_utils.py  types.py
clipper/llm/: __init__.py  grok.py
clipper/nodes/: __init__.py  caption.py  context.py  cut.py  download.py  ingest_gate.py  metadata.py  process_clip.py  reframe.py  report.py  select_highlights.py  transcribe.py  upload_drafts.py
clipper/video/: __init__.py  caption.py  cut.py  reframe.py
clipper/youtube/: __init__.py  auth.py  upload.py
tests/: test_cache_key.py  test_caption.py  test_chunking.py  test_config.py  test_expand.py  test_graph.py  test_grok_parsing.py  test_highlights.py  test_upload_body.py
